Add variable to separate by frequency type

--- a/wordsintransition/NAMESPACE
+++ b/wordsintransition/NAMESPACE
@@ -6,6 +6,7 @@ export(find_graphviz)
 export(read_all_graphviz_chunks)
 export(recode_message_type)
 export(recode_question_type)
+export(recode_transcription_frequency)
 export(recode_version)
 import(dplyr)
 import(magrittr)
