--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-Fabric==1.10.2
 graphviz==0.4.10
 invoke==0.12.2
 ipython==4.1.2
@@ -7,3 +6,5 @@ pandas==0.18.0
 Unipath==1.1
 pyenchant==1.6.6
 pytest==3.0.2
+PyYAML==3.12
+requests==2.11.1
