--- a/wordsintransition/NAMESPACE
+++ b/wordsintransition/NAMESPACE
@@ -2,13 +2,18 @@
 
 export(bin_trials)
 export(count_valid_responses)
+export(determine_trial_id)
 export(label_outliers)
 export(label_trial_in_block)
 export(read_wordsintransition_chunks)
+export(recode_edge_generations)
+export(recode_generation)
 export(recode_message_type)
 export(recode_question_type)
+export(recode_survey_type)
 export(recode_transcription_frequency)
 export(recode_version)
+export(z_score_by_subj)
 import(dplyr)
 import(magrittr)
 importFrom(crotchet,read_all_graphviz_chunks)
