Move stats into R pkg'

--- a/wordsintransition/NAMESPACE
+++ b/wordsintransition/NAMESPACE
@@ -5,6 +5,7 @@ export(count_valid_responses)
 export(determine_trial_id)
 export(label_outliers)
 export(label_trial_in_block)
+export(lmer_mod_results)
 export(read_wordsintransition_chunks)
 export(recode_edge_generations)
 export(recode_generation)
