--- a/wordsintransition/NAMESPACE
+++ b/wordsintransition/NAMESPACE
@@ -3,6 +3,7 @@
 export(bin_trials)
 export(count_valid_responses)
 export(determine_trial_id)
+export(glmer_mod_results)
 export(label_outliers)
 export(label_trial_in_block)
 export(lmer_mod_results)
